# atra

./: .dockerignore  README.md  cli  docker-compose.yml  invm  writeup-proof.md
.github/workflows/: ci.yml  generate-manifests.yml  test.yml
atra-cli/: .gitignore  Dockerfile  README.md  integration_tests.sh  invm  pyproject.toml  requirements.txt  setup.py
atra-cli/scripts/: setup_env
atra-gateway/: .gitignore  Dockerfile  README.md  mix.exs
atra-gateway/lib/: atra_gateway.ex  kobara_gateway.ex
atra-gateway/test/: kobara_gateway_test.exs
atra-ob/: .gitignore  Cargo.toml  Dockerfile  build.rs  perf_findings.txt
atra-ob/benches/: matching_engine_benchmark.rs
atra-ob/tests/: order_book_tests.rs
atra-proto/proto/: orderbook.proto
cli/: .gitignore  Dockerfile  README.md  __main__.py  atra  integration_tests.sh  pyproject.toml  setup.py
cli/atra_platform/env/: windows.py
cli/cli/: commands.py
cli/orderbook/: formatter.py
cli/platform/: platforms.py
cli/scripts/: generate_proto.py
cli/setup/: environment.py
cli/src/atra_cli_core/: __main__.py
cli/src/atra_cli_core/atra_platform/: __init__.py
cli/src/atra_cli_core/atra_platform/env/: unix.py
cli/src/atra_cli_core/orderbook/: client.py  formatter.py
cli/src/atra_cli_core/scripts/: generate_proto.py
cli/src/atra_cli_core/setup_internals/: environment.py
cli/src/atra_cli_core/utils/: cleanup.py  commands.py  parser.py  venv_manager.py
cli/utils/: commands.py  venv_manager.py
doc/: README.md
doc/components/: Proto.md  matching_engine.md
doc/mmd/: components.mmd  data_structures.mmd  (+5 more)
k8/: README.md
kobara-cli/: .gitignore  Dockerfile  README.md  cli.py  invm  pyproject.toml  setup.py
kobara-cli/scripts/: generate_proto.py  setup_dev.py  setup_env
kobara-ob/: Cargo.toml  Dockerfile  bench_results.json  build.rs  mix.exs  viz_bench.py
kobara-ob/benches/: matching_engine_benchmark.rs
kobara-ob/lib/mix/tasks/: compile.protobuf.ex
kobara-ob/lib/orderbook_service/: application.ex  grpc_server.ex  native.ex  order_book.ex  types.ex
kobara-ob/native/orderbook_core/: Cargo.toml
kobara-ob/native/orderbook_core/src/: lib.rs  orderbook.rs  types.rs
kobara-ob/proto/: orderbook.proto
kobara-ob/src/: lib.rs  orderbook.rs  types.rs
kobara-ob/src/api/: mod.rs  service.rs
kobara-ob/src/core/: matchingengine.rs  mod.rs  orderbook.rs  trade_history.rs
kobara-ob/tests/: order_book_tests.rs
kobara_gateway/: .gitignore  README.md  mix.exs
(+39 files in other folders)
