[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atra-cli"
version = "0.1.0"
description = "CLI client for atra Order Book"
requires-python = ">=3.7"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0"
]

[project.scripts]
atra-cli = "atra_cli.cli:main"
